--- a/papeleria.html
+++ b/papeleria.html
@@ -26,7 +26,7 @@
     <h1>Papelería</h1>
     
     <div class="producto-item">
-      <img src="img/libretarayaS.jpg" alt="Libreta De Rayas" />
+      <img src="img/libretarayas.jpg" alt="Libreta De Rayas" />
       <h3>Libreta De Rayas</h3>
       <p>$27.00</p>
       <label for="cantidad-pap-1">Cantidad:</label>
