--- a/focos.html
+++ b/focos.html
@@ -26,7 +26,7 @@
   <h1>Focos</h1>
     
     <div class="producto-item">
-      <img src="img/FOCO 60W.WEBP" alt="LAMPARA LED LUZ FRIA 60 W" />
+      <img src="FOCO 60W.WEBP" alt="LAMPARA LED LUZ FRIA 60 W" />
       <h3>LAMPARA DE LED LUZ FRIA 60 W</h3>
       <p>$100</p>
       <label for="cantidad-foco-1">Cantidad:</label>
